@@ -44,6 +44,7 @@ nobuild       = False  # don't actually build the packages
 makeclean     = False  # run make clean before building
 makecheck     = False  # run make check after building
 makedist      = False  # run make dist after building
+makedistcheck = False  # run make distcheck after building
 
 interact      = True   # whether to interact with the user.
 
