@@ -1,3 +1,11 @@
+2007-03-03  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/commands/base.py, jhbuild/modtypes/autotools.py,
+	jhbuild/defaults.jhbuildrc: added support for make distcheck
+	(config/makedistcheck) and added command-line parameters to
+	activate make dist (-d) and make distcheck (--distcheck), for build
+	and buildone commands. (closes: #407503)
+
 2007-03-02  Mariano Suárez-Alvarez  <mariano@gnome.org>
 
 	* modulesets/gnome-2.18.modules: build the correct tag of ekiga.
